<resources>
    <string name="app_name">My Events</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="all_events_fragment_label">All Events</string>
    <string name="add_event_fragment_label">Add Event</string>

    <string name="name">Event Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_event">Add Event</string>
    <string name="days">DAYS</string>
    <string name="colon">:</string>
    <string name="hours">HOURS</string>
    <string name="mins">MINS</string>
    <string name="secs">SECS</string>
    <string name="save">Save</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="done">Wait is Over!</string>
    <string name="str_dlt">Delete </string>
    <string name="str_dlt_que">Are you sure want to delete</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="empty">Empty</string>
    <string name="yourlist">Your Event List is</string>
    <string name="finish">Finish</string>

</resources>